# Shmerminal

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
shvix/: .gitignore  LAYOUT.md  PLAN.md  README.md  package.json  pyproject.toml  tsconfig.json
shvix/.claude-plugin/: plugin.json
shvix/py/: corpus.py  daemon.py  dispatcher.py  ollama_client.py  prompts.py  shmerminal.py
shvix/py/runbooks/: _shmerminal.py  frozen_pty.py  lockfile_stuck.py  port_conflict.py  session_corrupted.py
shvix/py/tests/: test_corpus.py  test_fix_handler.py  test_prompts.py  test_runbooks.py
shvix/scripts/: e2e.sh
shvix/skill/: README.md  SKILL.md
shvix/src/: cli.ts
skill/: SKILL.md
skill/references/: cli-reference.md
src/: cli.ts  sessions.ts  shmerm.ts  shmerm_agent.py  tunnel.ts
