[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shvix"
version = "0.1.0"
description = "Local recovery daemon for shmerminal/openclaw — cross-platform via Ollama"
requires-python = ">=3.10"
# Stdlib-only on purpose. The model runtime is Ollama (external daemon),
# spoken to over HTTP via urllib. No ML libs, no HTTP libs, no frameworks.
dependencies = []
